# autocrat

./: .gitignore  Anchor.toml  LICENSE  README.md  package.json
.devcontainer/: Dockerfile
.github/workflows/: test-anchor.yml
app/: package.json
app/src/: AmmClient.ts  AutocratClient.ts  InstructionHandler.ts  constants.ts  index.ts  types.ts
app/src/instructions/: addLiquidity.ts  addProposalInstructions.ts  createAmm.ts  createAmmPosition.ts  createProposalInstructions.ts  createProposalPartOne.ts  createProposalPartTwo.ts  finalizeProposal.ts  index.ts  initializeDao.ts  mintConditionalTokens.ts  redeemConditionalTokens.ts  removeLiquidity.ts  swap.ts  updateDao.ts  updateLtwap.ts
app/src/instructions/amm/: addLiquidity.ts  createAmm.ts  createAmmPosition.ts  removeLiquidity.ts  swap.ts  updateLtwap.ts
app/src/instructions/autocrat/: addProposalInstructions.ts  createProposal.ts  createProposalPartOne.ts  (+11 more)
app/src/types/: amm.ts  autocrat.ts  index.ts
app/src/utils/: index.ts  lookupTable.ts  numbers.ts  pda.ts
programs/amm/: Cargo.toml
programs/amm/src/: error.rs  lib.rs  tests.rs
programs/amm/src/instructions/: add_liquidity.rs  create_amm.rs  create_position.rs  mod.rs  remove_liquidity.rs  swap.rs  update_ltwap.rs
programs/amm/src/state/: amm.rs  mod.rs
programs/amm/src/utils/: anchor_decimal.rs  mod.rs  seeds.rs
programs/autocrat/: Cargo.toml
programs/autocrat/src/: error.rs  lib.rs
programs/hybrid/: Cargo.toml
programs/hybrid/src/: error.rs  lib.rs
scripts/: submitProposal.ts
tests/: amm.ts  autocrat.ts
tests/utils/: index.ts
(+61 files in other folders)
