[package]
name = "amm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "=1.17.18"
solana-security-txt = "1.1.1"
num-traits = "0.2"
num-derive = "0.4.1"
rust_decimal = { version = "=1.29.1", features = ["maths"] }
borsh = "0.9.1"